--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,12 +9,12 @@
   "scripts": {
     "dev": "vite",
     "build": "pnpm run build:client && pnpm run build:server",
-    "build:client": "vite build --ssrManifest --outDir dist/client && cp ./dist/client/index.html ./dist/client/template.html && cp ./dist/client/index.html ./dist/client/404.html",
+    "build:client": "vite build --ssrManifest --outDir dist/client && shx cp ./dist/client/index.html ./dist/client/template.html && shx cp ./dist/client/index.html ./dist/client/404.html",
     "build:server": "vite build --ssr src/main-server.tsx --outDir dist/server",
     "tsc": "tsc --noEmit",
     "lint:fix": "eslint --fix",
     "prettier:write": "prettier --write ./src",
-    "generate": "NODE_ENV=production node ./server.js",
+    "generate": "cross-env NODE_ENV=production node ./server.js",
     "generate:with-build": "pnpm build && pnpm generate",
     "preview": "vite preview --outDir dist/client",
     "preview:with-generate": "pnpm generate:with-build && pnpm preview"
@@ -63,6 +63,7 @@
     "express": "^5.1.0",
     "msw": "^2.10.2",
     "prettier": "^3.4.2",
+    "shx": "^0.3.4",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.8.3",
